# assignment

./: .dockerignore  .gitignore  README.md  docker-compose.yml  docker-compose_dev.yml
docker/nginx/: default.conf
docker/postgresql/: .env.db  Dockerfile  initialize_tables.sql
docker/rust/: Dockerfile
frontend/: .gitignore  next.config.js  package-lock.json  package.json
frontend/components/: countdown.js  modal.js
frontend/context/: authContext.js
frontend/pages/: _app.js  index.js  login.js  menu.js  order.js  protected.js
simple_restaurant_api/: .env  Cargo.toml
simple_restaurant_api/public/: 404.html  index.html  login.html  menu.html  order.html
simple_restaurant_api/public/_next/static/chunks/: 45-189d869d7fa0bcf5.js
simple_restaurant_api/public/_next/static/chunks/pages/: index-d5348a3b6f33d3b9.js  login-6455463d75335280.js  menu-ee131a61301b2416.js  order-7b02b0380b7fa218.js
simple_restaurant_api/public/_next/static/css/: 55fd3925a3a1139a.css  650b009e1f1f7fb6.css  be977b44681bf681.css  e8912945cb61fa43.css
simple_restaurant_api/public/_next/static/tm3qYYFFyhsJbbSgiwoY4/: _buildManifest.js
simple_restaurant_api/src/: main.rs
simple_restaurant_api/src/api/: auth.rs  menu.rs  mod.rs  order.rs  restaurant_table.rs  test.rs
simple_restaurant_api/src/api/api_handler/: handlers.rs
simple_restaurant_api/src/api/jwt/: jwt.rs
simple_restaurant_api/src/db/: config.rs  mod.rs  pool.rs
simple_restaurant_api/src/db/model/: menu.rs  mod.rs  restaurant_table.rs  user.rs
simple_restaurant_api/src/lib/: logger.rs
(+5 files in other folders)
