[package]
name = "simple_restaurant_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
# db
bb8 = "0.5"
bb8-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
postgres = "0.19"
tokio-postgres = "0.7"
# auth
jsonwebtoken = "7"
bcrypt = "0.10"
serde = { version = "1", features = ["derive"] }
# other
serde_json = "1.0"

# TODO Remove here for prod
[profile.dev]
opt-level = 0